# public/swagger.json
@@ -139,48 +139,6 @@
       "ICreateCondition": {
         "$ref": "#/components/schemas/Pick_ICondition.name_"
       },
-      "INotice": {
-        "properties": {
-          "_id": {
-            "$ref": "#/components/schemas/mongoose.Types.ObjectId"
-          },
-          "name": {
-            "type": "string"
-          },
-          "photo": {
-            "type": "string"
-          },
-          "description": {
-            "type": "string"
-          }
-        },
-        "required": ["_id", "name", "photo", "description"],
-        "type": "object",
-        "additionalProperties": false
-      },
-      "Pick_INotice.Exclude_keyofINotice._id__": {
-        "properties": {
-          "name": {
-            "type": "string"
-          },
-          "photo": {
-            "type": "string"
-          },
-          "description": {
-            "type": "string"
-          }
-        },
-        "required": ["name", "photo", "description"],
-        "type": "object",
-        "description": "From T, pick a set of properties whose keys are in the union K"
-      },
-      "Omit_INotice._id_": {
-        "$ref": "#/components/schemas/Pick_INotice.Exclude_keyofINotice._id__",
-        "description": "Construct a type with the properties of T except for those in type K."
-      },
-      "ICreateNotice": {
-        "$ref": "#/components/schemas/Omit_INotice._id_"
-      },
       "Image": {
         "properties": {
           "url": {
@@ -254,6 +212,19 @@
         "type": "object",
         "additionalProperties": false
       },
+      "Pick_IOrder.product_": {
+        "properties": {
+          "product": {
+            "$ref": "#/components/schemas/mongoose.Types.ObjectId"
+          }
+        },
+        "required": ["product"],
+        "type": "object",
+        "description": "From T, pick a set of properties whose keys are in the union K"
+      },
+      "IOrderDto": {
+        "$ref": "#/components/schemas/Pick_IOrder.product_"
+      },
       "IOrder": {
         "properties": {
           "_id": {
@@ -273,29 +244,6 @@
         "type": "object",
         "additionalProperties": false
       },
-      "Pick_IOrder.Exclude_keyofIOrder._id__": {
-        "properties": {
-          "product": {
-            "$ref": "#/components/schemas/mongoose.Types.ObjectId"
-          },
-          "orderer": {
-            "$ref": "#/components/schemas/mongoose.Types.ObjectId"
-          },
-          "phone": {
-            "type": "string"
-          }
-        },
-        "required": ["product", "orderer", "phone"],
-        "type": "object",
-        "description": "From T, pick a set of properties whose keys are in the union K"
-      },
-      "Omit_IOrder._id_": {
-        "$ref": "#/components/schemas/Pick_IOrder.Exclude_keyofIOrder._id__",
-        "description": "Construct a type with the properties of T except for those in type K."
-      },
-      "IOrderDto": {
-        "$ref": "#/components/schemas/Omit_IOrder._id_"
-      },
       "IProductResponse": {
         "properties": {
           "name": {
@@ -303,9 +251,6 @@
           },
           "_id": {
             "$ref": "#/components/schemas/mongoose.Types.ObjectId"
-          },
-          "description": {
-            "type": "string"
           },
           "thumbnail": {
             "type": "string"
@@ -319,6 +264,9 @@
           "price": {
             "type": "number",
             "format": "double"
+          },
+          "description": {
+            "type": "string"
           },
           "condition": {
             "properties": {
@@ -363,10 +311,10 @@
         "required": [
           "name",
           "_id",
-          "description",
           "thumbnail",
           "gallery",
           "price",
+          "description",
           "condition",
           "category"
         ],
@@ -381,9 +329,6 @@
           "_id": {
             "$ref": "#/components/schemas/mongoose.Types.ObjectId"
           },
-          "description": {
-            "type": "string"
-          },
           "thumbnail": {
             "type": "string"
           },
@@ -396,6 +341,9 @@
           "price": {
             "type": "number",
             "format": "double"
+          },
+          "description": {
+            "type": "string"
           },
           "condition": {
             "properties": {
@@ -446,10 +394,10 @@
         "required": [
           "name",
           "_id",
-          "description",
           "thumbnail",
           "gallery",
           "price",
+          "description",
           "condition",
           "category",
           "similar"
@@ -460,9 +408,6 @@
       "Pick_IProduct.Exclude_keyofIProduct._id__": {
         "properties": {
           "name": {
-            "type": "string"
-          },
-          "description": {
             "type": "string"
           },
           "condition": {
@@ -483,16 +428,19 @@
           "price": {
             "type": "number",
             "format": "double"
+          },
+          "description": {
+            "type": "string"
           }
         },
         "required": [
           "name",
-          "description",
           "condition",
           "category",
           "thumbnail",
           "gallery",
-          "price"
+          "price",
+          "description"
         ],
         "type": "object",
         "description": "From T, pick a set of properties whose keys are in the union K"
@@ -898,88 +846,6 @@
         "parameters": []
       }
     },
-    "/api/notices": {
-      "get": {
-        "operationId": "GetNotices",
-        "responses": {
-          "200": {
-            "description": "Ok",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "items": {
-                    "$ref": "#/components/schemas/INotice"
-                  },
-                  "type": "array"
-                }
-              }
-            }
-          }
-        },
-        "tags": ["Notice"],
-        "security": [],
-        "parameters": []
-      },
-      "post": {
-        "operationId": "CreateNotice",
-        "responses": {
-          "200": {
-            "description": "Ok",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ICondition"
-                }
-              }
-            }
-          }
-        },
-        "tags": ["Notice"],
-        "security": [
-          {
-            "jwtAuth": []
-          }
-        ],
-        "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/ICreateNotice"
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/notices/user/my-notices": {
-      "get": {
-        "operationId": "GetMyNotices",
-        "responses": {
-          "200": {
-            "description": "Ok",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "items": {
-                    "$ref": "#/components/schemas/INotice"
-                  },
-                  "type": "array"
-                }
-              }
-            }
-          }
-        },
-        "tags": ["Notice"],
-        "security": [
-          {
-            "jwtAuth": []
-          }
-        ],
-        "parameters": []
-      }
-    },
     "/api/orders": {
       "get": {
         "operationId": "GetOrders",
@@ -1010,7 +876,8 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/IOrder"
+                  "type": "string",
+                  "nullable": true
                 }
               }
             }
